# Aircon

./: .clangd  CMakeLists.txt
.devcontainer/: devcontainer.env  devcontainer.json
src/: CMakeLists.txt  main.cpp
src/network/: CMakeLists.txt
src/network/include/: ntp.hpp  wifi.hpp
src/network/src/: ntp.cpp  wifi.cpp
src/platform/: CMakeLists.txt
src/platform/include/: debug.hpp  rtc.hpp
src/platform/src/: rtc.cpp
src/utils/: CMakeLists.txt
src/utils/include/: logger.hpp
src/utils/src/: logger.cpp
